# S_WebSocket

./: CMakeLists.txt  README.md
include/: S_WS_ClientAPI.h  S_WS_Msg.h  S_WS_ServerAPI.h
src/: DefaultConfig.cg_info
src/Utils/: Logger.cpp  Logger.h  Util.cpp  Util.h  Utils.cpp  Utils.h
src/WebSocketClient/: S_WS_ClientAPI.cpp  S_WS_ClientConnect.cpp  S_WS_ClientConnect.h  S_WS_ClientService.cpp  S_WS_ClientService.h
src/WebSocketClient/test/: S_WS_Client.cpp  S_WS_Client.h  main.cpp
src/WebSocketMsg/: S_WS_Msg.cpp
src/WebSocketServer/: S_WS_Connection.cpp  S_WS_Connection.h  S_WS_ConnectionManager.cpp  S_WS_ConnectionManager.h  S_WS_ServerAPI.cpp  S_WS_ServerService.cpp  S_WS_ServerService.h
src/WebSocketServer/test/: S_WS_Server.cpp  S_WS_Server.h  main.cpp
wsClient/: CMakeLists.txt
wsClient/test/: CMakeLists.txt
wsServer/: CMakeLists.txt
wsServer/test/: CMakeLists.txt
